--- a/unity1week/Packages/manifest.json
+++ b/unity1week/Packages/manifest.json
@@ -10,6 +10,7 @@
     "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.2.2",
     "com.unity.purchasing": "2.1.1",
+    "com.unity.recorder": "2.5.4",
     "com.unity.render-pipelines.lightweight": "7.3.1",
     "com.unity.test-framework": "1.1.18",
     "com.unity.textmeshpro": "2.0.1",
