スコアとUIを結びつけた

--- a/unity1week/.gitignore
+++ b/unity1week/.gitignore
@@ -64,3 +64,5 @@ crashlytics-build.properties
 Assets/Plugins/UniRx
 Assets/Plugins/UniRx.meta
 Recordings
+Assets/TextMesh Pro
+Assets/TextMesh Pro.meta
